"Updated HTML and JavaScript files: modified manga item layouts, removed unnecessary code, and added PDF link functionality."

--- a/erotique.html
+++ b/erotique.html
@@ -113,7 +113,7 @@
 					data-id="1">
 					<img src="images/Section 69.png" class="card-img-top manga-cover" alt="Section 69">
 					<div class="card-body d-flex flex-column text-center">
-						<p class="card-title flex-grow-1">Section 69</p>
+						<div class="manga-title">Section 69<br> ep 1 </div>
 						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
 							data-pdf-url="https://drive.google.com/file/d/17WGSoRrGpIwnyh21jbD9oNkWG5HFllZH/view?usp=drive_link">Ouvrir</a>
 					</div>
@@ -124,9 +124,9 @@
 					data-id="2">
 					<img src="images/Margarethe.png" class="card-img-top manga-cover" alt="Margarethe">
 					<div class="card-body d-flex flex-column text-center">
-						<p class="card-title flex-grow-1">Margarethe</p>
+						<div class="manga-title">Margarethe <br> ep 1</div>
 						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
-							data-pdf-url="https://drive.google.com/file/d/1ImMUZOMaap-Bl5_E3rQBFU8gtirT6ijf/view?usp=drive_link">Ouvrir</a>
+							data-pdf-url="https://drive.google.com/file/d/1b7T8POXEid_L01SETDFhqwYUfm-6GGse/view?usp=drive_link">Ouvrir</a>
 					</div>
 				</div>
 
@@ -136,9 +136,9 @@
 					<img src="images/La Bourgeoise et le Nécessiteux.png" class="card-img-top manga-cover"
 						alt="La Bourgeoise et le Nécessiteux">
 					<div class="card-body d-flex flex-column text-center">
-						<p class="card-title flex-grow-1">La Bourgeoise et le Nécessiteux</p>
+						<div class="manga-title">La Bourgeoise et le<br>Nécessiteux</div>
 						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
-							data-pdf-url="https://drive.google.com/file/d/1hKOaRUAzSwDmJ51CTUI-K-OLy29EIuKY/view?usp=drive_link">Ouvrir</a>
+							data-pdf-url="https://drive.google.com/file/d/1hKOaRUAzSwDmJ51CTUI-K-OLy29EIuKY">Ouvrir</a>
 					</div>
 				</div>
 
@@ -148,14 +148,16 @@
 					<img src="images/Partageuse de fesses s01.png" class="card-img-top manga-cover"
 						alt="Partageuse de fesses s01">
 					<div class="card-body d-flex flex-column text-center">
-						<p class="card-title flex-grow-1">Partageuse de fesses s01</p>
+						<div class="manga-title">Partageuse de fesses</div>
 						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
-							data-pdf-url="https://drive.google.com/file/d/1aM-fJN92UAJHPRAe6deFiaC63ON454EG/view">Ouvrir</a>
+							data-pdf-url="https://drive.google.com/file/d/1aM-fJN92UAJHPRAe6deFiaC63ON454EG">Ouvrir</a>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- Section Érotiques -->
+
+
 
 		<!-- pieds de page -->
 		<footer>
