--- a/recherche.html
+++ b/recherche.html
@@ -163,205 +163,46 @@
                     </div>
                 </div>
 
-                <!-- 5 -->
+                <!-- Section 69 ep 6-11 -->
                 <div class="manga-item" data-id="1">
                     <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
-                        <div class="manga-title">Section 69 ep 2</div>
+                        <div class="manga-title">Section 69 ep 6-11</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1B-Whx64F62_vUTFsT_P9f0lLd6ttYcNX/view?usp=drive_link">Ouvrir</a>
 
                     </div>
                 </div>
 
-                <!-- 6 -->
+                <!-- Section 69 ep 1-5 -->
                 <div class="manga-item" data-id="1">
                     <img src="images/Section 69.png"
                         alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
-                        <div class="manga-title">Section 69 ep 3</div>
-                        <div class="manga-author">par TABICHI</div>
-                        <a href="document/erotique/section 69/Section 69 chapitre 03.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- 7 -->
-                <div class="manga-item" data-id="1">
-                    <img src="images/Section 69.png"
-                        alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
-                        class="manga-cover" class="manga-cover" />
-                    <div class="manga-info">
-                        <div class="manga-title">Section 69 ep 4</div>
-                        <div class="manga-author">par TABICHI</div>
-                        <a href="document/erotique/section 69/Section 69 chapitre 04.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
+                        <div class="manga-title">Section 69 ep 1-5</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1u6wEzCisMkyR234D6cM7SimV3tc5oOju/view?usp=drive_link">Ouvrir</a>
                     </div>
                 </div>
 
                 <!-- 8 -->
-                <div class="manga-item" data-id="1">
-                    <img src="images/Section 69.png"
-                        alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
-                        class="manga-cover" class="manga-cover" />
+                <div class="manga-item" data-id="2">
+                    <img src="images/Margarethe.png"
+                        alt="Couverture de manga: Margarethe, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
-                        <div class="manga-title">Section 69 ep 5</div>
-                        <div class="manga-author">par TABICHI</div>
-                        <a href="document/erotique/section 69/Section 69 chapitre 05.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
+                        <div class="manga-title">Margarethe <br> 1-4</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1C1XYvz-wyruIjCHkVy-gNBsEZQlnOig5/view?usp=drive_link">Ouvrir</a>
                     </div>
                 </div>
 
-                <!-- 9 -->
-                <div class="manga-item" data-id="1">
-                    <img src="images/Section 69.png"
-                        alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
-                        class="manga-cover" class="manga-cover" />
-                    <div class="manga-info">
-                        <div class="manga-title">Section 69 ep 6</div>
-                        <div class="manga-author">par TABICHI</div>
-                        <a href="document/erotique/section 69/Section 69 chapitre 06.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- 10 -->
-                <div class="manga-item" data-id="1">
-                    <img src="images/Section 69.png"
-                        alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
-                        class="manga-cover" class="manga-cover" />
-                    <div class="manga-info">
-                        <div class="manga-title">Section 69 ep 7</div>
-                        <div class="manga-author">par TABICHI</div>
-                        <a href="document/erotique/section 69/Section 69 chapitre 07.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- 11 -->
-                <div class="manga-item" data-id="1">
-                    <img src="images/Section 69.png"
-                        alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
-                        class="manga-cover" class="manga-cover" />
-                    <div class="manga-info">
-                        <div class="manga-title">Section 69 ep 8</div>
-                        <div class="manga-author">par TABICHI</div>
-                        <a href="document/erotique/section 69/Section 69 chapitre 08.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- 12 -->
-                <div class="manga-item" data-id="1">
-                    <img src="images/Section 69.png"
-                        alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
-                        class="manga-cover" class="manga-cover" />
-                    <div class="manga-info">
-                        <div class="manga-title">Section 69 ep 9</div>
-                        <div class="manga-author">par TABICHI</div>
-                        <a href="document/erotique/section 69/Section 69 chapitre 09.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- 13 -->
-                <div class="manga-item" data-id="1">
-                    <img src="images/Section 69.png"
-                        alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
-                        class="manga-cover" class="manga-cover" />
-                    <div class="manga-info">
-                        <div class="manga-title">Section 69 ep 10</div>
-                        <div class="manga-author">par TABICHI</div>
-                        <a href="document/erotique/section 69/Section 69 chapitre 10.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- 14 -->
-                <div class="manga-item" data-id="1">
-                    <img src="images/Section 69.png"
-                        alt="Couverture de manga: Section 69, style érotique avec des personnages en tenue légère"
-                        class="manga-cover" class="manga-cover" />
-                    <div class="manga-info">
-                        <div class="manga-title">Section 69 ep 11</div>
-                        <div class="manga-author">par TABICHI</div>
-                        <a href="document/erotique/section 69/Section 69 chapitre 11.pdf" class="btn"
-                            download>Ouvrir/Télécharger</a>
-                        <div class="star-rating">
-                            <span class="star" data-rating="1">★</span>
-                            <span class="star" data-rating="2">★</span>
-                            <span class="star" data-rating="3">★</span>
-                            <span class="star" data-rating="4">★</span>
-                            <span class="star" data-rating="5">★</span>
-                            <span class="rating-count">(0)</span>
-                        </div>
-                    </div>
-                </div>
             </div>
 
         </section>
@@ -406,6 +247,22 @@
     <script src="vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="vendor/swiper/swiper-bundle.min.js"></script>
+
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+
+            document.querySelectorAll('.pdf-link').forEach(button => {
+                button.addEventListener('click', function (event) {
+                    event.preventDefault(); // Empêche l'action par défaut du lien
+                    const pdfUrl = this.getAttribute('data-pdf-url'); // Récupère l'URL du PDF
+                    const pdfId = pdfUrl.split('/d/')[1].split('/')[0]; // Extraire l'ID du fichier
+                    window.location.href = `lecteur.html?pdf=${pdfId}`; // Redirige vers lecteur.html avec l'ID du PDF
+                });
+            });
+        });
+
+    </script>
 
     <!-- Main JS File -->
     <script src="js/utils.js"></script>
