modified:   css/main.css new file:   "images/Capture d\342\200\231\303\251cran_26-9-2024_31945_.jpeg" 	new file:   "images/Capture d\342\200\231\303\251cran_26-9-2024_41829_.jpeg" 	new file:   images/ma brute.jpg 	new file:   index copy.html 	modified:   index.html 	modified:   tarif.html

--- a/index copy.html
+++ b/index copy.html
@@ -106,102 +106,112 @@
         <!-- /Hero Section -->
 
         <!-- Nouveautés -->
-        <style>
-            .image-carousel {
-                overflow: hidden;
-                /* Cache le contenu en dehors du cadre */
-                position: relative;
-                width: 100%;
-                height: 267px;
-                /* Ajustez si besoin */
-                padding: 10px 0;
-            }
+        <section id="nouveautes" class="my-5">
+            <h2 class="text-center">Nouveautés</h2>
+            <div class="d-flex flex-wrap justify-content-center g-4 manga-grid">
 
-            .image-container {
-                display: flex;
-                animation: scroll 20s linear infinite;
-                height: 100%;
-            }
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
+                    <div class="card h-100">
+                        <img src="images/Section 69.png" class="card-img-top" alt="Section 69">
+                        <div class="card-body d-flex flex-column text-center">
+                            <div class="manga-title">Section 69</div>
+                            <a href="erotique.html#erotique#1" class="btn btn-custom mt-3 pdf-link">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
 
-            .rectangle {
-                height: 267px;
-                margin-right: 20px;
-                object-fit: cover;
-                border-radius: 8px;
-            }
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
+                    <div class="card h-100">
+                        <img src="images/Margarethe.png" class="card-img-top" alt="Margarethe">
+                        <div class="card-body d-flex flex-column text-center">
+                            <div class="manga-title">Margarethe <br> ep 1</div>
+                            <a href="erotique.html#erotique#2" class="btn btn-custom mt-3 pdf-link">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
 
-            @keyframes scroll {
-                0% {
-                    transform: translateX(100%);
-                }
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
+                    <div class="card h-100">
+                        <img src="images/La Bourgeoise et le Nécessiteux.png" class="card-img-top"
+                            alt="La Bourgeoise et le Nécessiteux">
+                        <div class="card-body d-flex flex-column text-center">
+                            <p class="card-title flex-grow-1">La Bourgeoise et le Nécessiteux</p>
+                            <a href="erotique.html#erotique#3" class="btn btn-custom mt-3 pdf-link">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
 
-                100% {
-                    transform: translateX(-100%);
-                }
-            }
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
+                    <div class="card h-100">
+                        <img src="images/Partageuse de fesses s01.png" class="card-img-top" alt="Partageuse de fesses">
+                        <div class="card-body d-flex flex-column text-center">
+                            <p class="card-title flex-grow-1">Partageuse de fesses</p>
+                            <a href="erotique.html#erotique#4" class="btn btn-custom mt-3 pdf-link">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
 
-            /* Styles adaptatifs pour s'assurer que le carrousel fonctionne sur mobile */
-            @media (max-width: 768px) {
-                .rectangle {
-                    height: 200px;
-                }
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
+                    <div class="card h-100">
+                        <img src="images/ma brute.jpg" class="card-img-top" alt="Partageuse de fesses">
+                        <div class="card-body d-flex flex-column text-center">
+                            <p class="card-title flex-grow-1">Partageuse de fesses</p>
+                            <a href="erotique.html#erotique#4" class="btn btn-custom mt-3 pdf-link">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
 
-                .image-container {
-                    animation-duration: 30s;
-                }
-            }
-        </style>
-        <div>
-            <h2 class="text-center mb-4">Nouveautés</h2>
-        </div>
-        <div class="image-carousel">
-            <div class="image-container">
-                <img src="images/Section 69.png" alt="Section 69" class="rectangle">
-                <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
-                <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
-                    class="rectangle">
-                <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
-                <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
-                <!-- Ajoutez d'autres images ici -->
             </div>
-        </div>
+        </section>
 
         <!-- Section Érotiques -->
         <section id="erotiques" class="my-5">
             <h2 class="text-center mb-4">Érotiques</h2>
             <div class="age-warning text-center">Attention : Contenu pour adultes (18+)</div>
-            <div class="image-carousel">
-                <div class="image-container">
-                    <img src="images/Section 69.png" alt="Section 69" class="rectangle">
-                    <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
-                    <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
-                        class="rectangle">
-                    <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
-                    <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
-                    <!-- Ajoutez d'autres images ici -->
+
+            <div class="d-flex flex-wrap justify-content-center g-4 manga-grid">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
+                    <div class="card h-100">
+                        <img src="images/Section 69.png" class="card-img-top" alt="Section 69">
+                        <div class="card-body d-flex flex-column text-center">
+                            <p class="card-title flex-grow-1">Section 69</p>
+                            <a href="erotique.html#erotique#1" class="btn btn-custom mt-3 pdf-link">Voir plus</a>
+                        </div>
+                    </div>
                 </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
+                    <div class="card h-100">
+                        <img src="images/Margarethe.png" class="card-img-top" alt="Margarethe">
+                        <div class="card-body d-flex flex-column text-center">
+                            <p class="card-title flex-grow-1">Margarethe</p>
+                            <a href="erotique.html#erotique#2" class="btn btn-custom mt-3 pdf-link">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
+                    <div class="card h-100">
+                        <img src="images/La Bourgeoise et le Nécessiteux.png" class="card-img-top"
+                            alt="La Bourgeoise et le Nécessiteux">
+                        <div class="card-body d-flex flex-column text-center">
+                            <p class="card-title flex-grow-1">La Bourgeoise et le Nécessiteux</p>
+                            <a href="erotique.html#erotique#3" class="btn btn-custom mt-3 pdf-link">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center">
+                    <div class="card h-100">
+                        <img src="images/Partageuse de fesses s01.png" class="card-img-top" alt="Partageuse de fesses">
+                        <div class="card-body d-flex flex-column text-center">
+                            <p class="card-title flex-grow-1">Partageuse de fesses</p>
+                            <a href="erotique.html#erotique#4" class="btn btn-custom mt-3 pdf-link">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </section>
 
-        <!-- Section Érotiques -->
-        <section id="Espaces Publicitaire" class="my-5">
-            <h2 class="text-center mb-4">Espaces Publicitaire</h2>
-            <div class="age-warning text-center">Contactez-nous pour publier vos articles sur notre site.</div>
-            <div class="age-warning text-center"> Bientot disponible.</div>
-            <!--     <div class="image-carousel">
-                <div class="image-container">
-                    <img src="images/Section 69.png" alt="Section 69" class="rectangle">
-                    <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
-                    <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
-                        class="rectangle">
-                    <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
-                    <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
-                     Ajoutez d'autres images ici 
-                </div>
-            </div>-->
-
-        </section>
         <!-- pieds de page -->
         <footer>
             <div class="footer-container justify-content-center">
@@ -262,41 +272,6 @@
 
     <!-- Main JS File -->
     <script src="js/utils.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const container = document.querySelector('.image-container');
-
-            let imagesLoaded = 8; // Nombre d'images initiales chargées
-            let loading = false;
-
-            // Fonction pour ajouter des images à la galerie
-            function loadMoreImages() {
-                if (loading) return;
-                loading = true;
-
-                setTimeout(() => {
-                    for (let i = 0; i < 4; i++) {
-                        const img = document.createElement('img');
-                        img.src = `images/image${imagesLoaded + i}-rectangle.jpg`;
-                        img.alt = `Image ${imagesLoaded + i}`;
-                        img.className = i % 2 === 0 ? 'rectangle' : 'square'; // Alterner entre carré et rectangle
-                        container.appendChild(img);
-                    }
-                    imagesLoaded += 4;
-                    loading = false;
-                }, 1000); // Simulation de chargement asynchrone
-            }
-
-            // Détecter le défilement pour charger plus d'images
-            window.addEventListener('scroll', () => {
-                if (window.scrollY + window.innerHeight >= document.documentElement.scrollHeight - 100) {
-                    loadMoreImages();
-                }
-            });
-        });
-    </script>
 
 
 </body>
