--- a/tarif.html
+++ b/tarif.html
@@ -103,7 +103,6 @@
             </section>
             <!-- /Hero Section -->
 
-
             <div class="container py-5">
                 <h1 class="text-center mb-5">Plans d'Abonnement Mensuel</h1>
 
@@ -112,7 +111,7 @@
                         <div class="card h-100 shadow">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Abonnement Mensuel</h5>
-                                <p class="card-text"><span class="display-1">2,500</span> FCFA</p>
+                                <p class="card-text"><span class="display-1">2,000</span> FCFA</p>
                                 <p class="card-text">Accès à tous nos livres 📚</p>
                                 <a href="#" class="btn btn-primary">Souscrire</a>
                             </div>
@@ -123,7 +122,7 @@
                         <div class="card h-100 shadow">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Abonnement Trimestriel</h5>
-                                <p class="card-text"><span class="display-1">6,500</span> FCFA</p>
+                                <p class="card-text"><span class="display-1">5,000</span> FCFA</p>
                                 <p class="card-text">Accès à tous nos livres 📚</p>
                                 <a href="#" class="btn btn-primary">Souscrire</a>
                             </div>
@@ -131,25 +130,66 @@
                     </div>
                 </div>
 
-                <!-- pieds de page -->
-                <footer>
-                    <div class="footer-container justify-content-center">
-                        <div class="footer-col">
-                            <h3>À propos de nous</h3>
-                            <p>eROS est un site web dédié à la diffusion de mangas japonais et érotiques en PDF.</p>
+                <div class="aide-section">
+                    <h1 class="text-center mb-4">Besoin d'Aide ?</h1>
+                    <div class="aide-container">
+                        <div class="aide-item">
+                            <h3>Comment consulter les mangas ?</h3>
+                            <p>Pour consulter un manga, il suffit de cliquer sur ouvrir. Vous serez redirigé vers une
+                                page dédiée où vous pourrez lire ou télécharger le fichier PDF. Patientez pendant 30s
+                                afin le fichier Pdf se charge en arriere plan.</p>
                         </div>
-                        <div class="footer-col">
-                            <h3>Contact</h3>
-                            <p>Si vous avez des questions ou des suggestions, n'hésitez pas à nous contacter.</p>
-                            <p><a href="mailto:admin@e-ros.xyz">admin@e-ros.xyz</a></p>
+
+                        <div class="aide-item">
+                            <h3>Comment télécharger un manga ?</h3>
+                            <p>Contactez-nous afin de vous envoyez les fichier pdf choisir en haut qualite</p>
+                        </div>
+
+                        <div class="aide-item">
+                            <h3>Problèmes de lecture de PDF ?</h3>
+                            <p>Si vous rencontrez des problèmes pour ouvrir ou lire un fichier PDF, assurez-vous d'avoir
+                                une bonne connection internet ou patientez que le chargement. Si vous avez un fichier
+                                pdf provenant de e-ros, utilisez le mot passe pour deverrouilez le fichier. Assurez-vous
+                                d'avoir un lecteur PDF installé, comme<a href="https://get.adobe.com/fr/reader/"
+                                    target="_blank">Adobe Acrobat Reader</a>.
+                            </p>
+                        </div>
+
+                        <div class="aide-item">
+                            <h3>Comment rechercher un manga ?</h3>
+                            <p>Utilisez la barre de recherche en haut de la page pour rechercher un manga en entrant le
+                                nom du titre ou le genre. Vous obtiendrez une liste de résultats correspondants.</p>
+                        </div>
+
+                        <div class="aide-item">
+                            <h3>Contactez-nous</h3>
+                            <p>Si vous avez des questions supplémentaires ou des suggestions, n'hésitez pas à nous <a
+                                    href="mailto:admin@e-ros.xyz">contacter</a>. Nous vous répondrons dès que
+                                possible.</p>
                         </div>
                     </div>
-                    <div class="footer-bottom">
-                        <p>&copy; 2024 eROS. Tous droits réservés.</p>
-                    </div>
-                </footer>
+                </div>
+            </div>
 
         </main>
+
+        <!-- pieds de page -->
+        <footer>
+            <div class="footer-container justify-content-center">
+                <div class="footer-col">
+                    <h3>À propos de nous</h3>
+                    <p>eROS est un site web dédié à la diffusion de mangas japonais et érotiques en PDF.</p>
+                </div>
+                <div class="footer-col">
+                    <h3>Contact</h3>
+                    <p>Si vous avez des questions ou des suggestions, n'hésitez pas à nous contacter.</p>
+                    <p><a href="mailto:admin@e-ros.xyz">admin@e-ros.xyz</a></p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 eROS. Tous droits réservés.</p>
+            </div>
+        </footer>
 
         <!-- Scroll Top -->
         <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
